Fix grid position on Firefox

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ h1 {
 #grid {
   margin: 0 auto;
   width: fit-content;
+  width: -moz-fit-content;
   position: relative;
   top: 5%;
 }
